rubic's separate cmake

--- a/rubic/CMakeLists.txt
+++ b/rubic/CMakeLists.txt
@@ -1,37 +1,33 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(example LANGUAGES CXX)
+project(rubic LANGUAGES C CXX)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../../bin)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(WIN32) 
-
-endif()
-
-if (UNIX)
-
-endif()
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_ENABLE_C99}")
 
 file(GLOB CORE_HDR *.h)
-file(GLOB CORE_SRC *.cpp) 
+file(GLOB CORE_SRC *.c) 
 
+#[[
 set_source_files_properties(
   ${CORE_SRC}
   PROPERTIES
   COMPILE_FLAGS "/wd4996"
 )
+]]
 
 set_source_files_properties(
-  rubic/rubic.c
+  ${CORE_SRC}
   PROPERTIES
   COMPILE_FLAGS "/wd4033 /wd4716"
 )
 
-add_library(example SHARED ${CORE_SRC} ${CORE_HDR} rubic/rubic.c)
+include_directories(..)
+add_library(rubic SHARED ${CORE_SRC} ${CORE_HDR} CubeApiTest.cpp)
 
-add_subdirectory(rubic)
 
 
