warning fix - it won't be present in emscripten, so no reason to look at it in MSVC

--- a/rubic/CMakeLists.txt
+++ b/rubic/CMakeLists.txt
@@ -23,7 +23,7 @@ set_source_files_properties(
 set_source_files_properties(
   ${CORE_SRC}
   PROPERTIES
-  COMPILE_FLAGS "/wd4033 /wd4716"
+  COMPILE_FLAGS "/wd4033 /wd4716 /wd4996"
 )
 
 include_directories(..)
