--- a/rubic/CMakeLists.txt
+++ b/rubic/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_ENABLE_C99}")
 file(GLOB CORE_HDR *.h)
 file(GLOB CORE_SRC *.c)
 
-set(CORE_SRC ${CORE_SRC} PawnRunner.cpp) 
+set(CORE_SRC ${CORE_SRC} ${CMAKE_CURRENT_LIST_DIR}/PawnRunner.cpp)
 
 #[[
 set_source_files_properties(
@@ -27,8 +27,8 @@ set_source_files_properties(
 )
 
 include_directories(..)
-# DualCompilation(rubic ${CORE_SRC} ${CORE_HDR})
-add_library(rubic SHARED ${CORE_SRC} ${CORE_HDR})
+DualCompilation(rubic "${CORE_SRC}" "${CORE_HDR}")
+#add_library(rubic SHARED ${CORE_SRC} ${CORE_HDR})
 
 
 
