Fix build on linux

--- a/rubic/CMakeLists.txt
+++ b/rubic/CMakeLists.txt
@@ -19,12 +19,13 @@ set_source_files_properties(
   COMPILE_FLAGS "/wd4996"
 )
 ]]
-
+if(WIN32)
 set_source_files_properties(
   ${CORE_SRC}
   PROPERTIES
   COMPILE_FLAGS "/wd4033 /wd4716 /wd4996"
 )
+endif()
 
 include_directories(..)
 DualCompilation(rubic "${CORE_SRC}" "${CORE_HDR}")
