--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -23,5 +23,5 @@ file(GLOB CORE_SRC *.cpp)
 
 include_directories(..)
 
-DualCompilation(example "${CORE_SRC}" "${CORE_HDR}")
+DualCompilation(example "${CORE_SRC}" "${CORE_HDR}" "-s USE_LIBPNG=1 -s USE_ZLIB=1 -s USE_BOOST_HEADERS=1")
 
