more of Pawn events in the Pawn support layer reversed dependencies to build VS first then wasm (handier to see errors in this order) first successful scubo-mapping (object flies in circles around module spike)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,6 @@ macro(DualCompilation name lsrc lhdr wasm_ext)
       # -s SAFE_HEAP=1 -s SAFE_HEAP_LOG=1 | -fsanitize=address -s ALLOW_MEMORY_GROWTH & -s ASSERTIONS=2 -s STACK_OVERFLOW_CHECK=2
       set(EMCC_FLAGS "${EMCC_FLAGS} -g4 -s ASSERTIONS=1 -s STACK_OVERFLOW_CHECK=1 -s DEMANGLE_SUPPORT=1")
     else()
-      message(FATAL_ERROR "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
       set(EMCC_FLAGS "${EMCC_FLAGS} -O3")
     endif()
 
@@ -52,7 +51,7 @@ macro(DualCompilation name lsrc lhdr wasm_ext)
       VERBATIM
     )
   endif()
-  add_dependencies(${name} wasm_${name})
+  add_dependencies(wasm_${name} ${name})
 endmacro()
 
 add_subdirectory(example)
