--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ add_subdirectory(example)
 add_subdirectory(rubic)
 add_subdirectory(race)
 add_subdirectory(trbl_example)
+add_subdirectory(pipes)
 #add_subdirectory(cocos)
