subdir for bonbon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ add_subdirectory(rubic)
 add_subdirectory(race)
 add_subdirectory(trbl_example)
 add_subdirectory(pipes)
+#add_subdirectory(bonbon)
 #add_subdirectory(cocos)
