rename of trbl example some expriments with cycling life

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 add_subdirectory(example)
 add_subdirectory(rubic)
 add_subdirectory(race)
-add_subdirectory(trbl_example)
+add_subdirectory(trbl)
 add_subdirectory(pipes)
 add_subdirectory(bonbon)
 #add_subdirectory(cocos)
