--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,5 @@ add_subdirectory(race)
 add_subdirectory(trbl)
 add_subdirectory(pipes)
 add_subdirectory(bonbon)
+add_subdirectory(pelin)
 #add_subdirectory(cocos)
