--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,5 @@ add_subdirectory(pipes)
 add_subdirectory(bonbon)
 add_subdirectory(pelin)
 #add_subdirectory(cocos)
+add_subdirectory(broadcast)
+
